[gd_scene load_steps=6 format=3 uid="uid://bbaq0kx2t163y"]

[ext_resource type="Script" uid="uid://bdrbup6sd1t8p" path="res://Scence/character/character.gd" id="1_jpsph"]
[ext_resource type="Texture2D" uid="uid://bto21ctxfmxig" path="res://assets/assets/art/characters/shadow.png" id="2_7oexw"]
[ext_resource type="PackedScene" uid="uid://dn2c8knavguqt" path="res://Scence/colliders/damage_emiter.tscn" id="3_7oexw"]
[ext_resource type="PackedScene" uid="uid://cepx10ewv5d3d" path="res://Scence/colliders/damage_receiver.tscn" id="4_0hjmp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hjmp"]
size = Vector2(7, 6)

[node name="Character" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_jpsph")
health = 40
damage = 10

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_7oexw")
centered = false
offset = Vector2(-7, 0)

[node name="CharacterSprite" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DamageEmiter" parent="." instance=ExtResource("3_7oexw")]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" parent="DamageEmiter" index="0"]
shape = SubResource("RectangleShape2D_0hjmp")

[node name="DamageReceiver" parent="." instance=ExtResource("4_0hjmp")]
monitorable = false

[node name="collateralDamageEmiter" parent="." instance=ExtResource("3_7oexw")]

[node name="GunSprite" type="Sprite2D" parent="."]

[node name="KnifeSprite" type="Sprite2D" parent="."]

[node name="WeaponPostion" type="Node2D" parent="KnifeSprite"]

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(100, 0)
collision_mask = 0

[node name="CollectibleSensor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectibleSensor"]

[editable path="DamageEmiter"]
[editable path="DamageReceiver"]
[editable path="collateralDamageEmiter"]
